User crud: added user detail + swagger
