# apps/user/controllers/user.go
@@ -160,6 +160,28 @@ func (uc UserController) UpdateUser(c *gin.Context) {
 	uc.detailUser(c, uint64(id))
 }
 
+// @Summary detail user
+// @Schemes
+// @Description detail user or admin
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param id path int true "user id"
+// @Success 200 {object} swagger.SingleUserResponse
+// @failure 401 {object} swagger.UnauthenticatedResponse
+// @failure 404 {object} swagger.NotFoundResponse
+// @failure 403 {object} swagger.AccessForbiddenResponse
+// @Router /admin/users/{id} [get]
+func (uc UserController) DetailUser(c *gin.Context) {
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		responses.ErrorJSON(c, http.StatusNotFound, gin.H{}, "No user found")
+		return
+	}
+
+	uc.detailUser(c, uint64(id))
+}
+
 func (uc *UserController) paginateUserList(c *gin.Context, message string) {
 	pagination := utils.BuildPagination(c)
 	users, count, err := uc.userService.GetAllUsers(pagination)
